# django-todoapp

./: pyproject.toml
templates/: base.html  create.html  delete.html  detail.html  list.html  update.html
todo/: models.py  views.py
todo/migrations/: 0001_initial.py  0002_auto_20201210_1236.py
todoproject/: settings.py
