[tool.poetry]
name = "todoproject"
version = "0.1.0"
description = ""
authors = ["yoshinori.yamashita2 <yoshinori.yamashita2@persol.co.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1.4"
flake8 = "^3.8.4"
autopep8 = "^1.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
